--- a/src/main/webapp/layout/left.xhtml
+++ b/src/main/webapp/layout/left.xhtml
@@ -49,21 +49,24 @@ Hint to editors: The menus follow the Chicago style of capitalization. Please ca
             <b:listLinks styleClass="navbar-sidebar">
                 <b:navLink header="#{msg['application.title']}" />
                 <b:navLink/>
-                
 
-              
-                
-       
-                     <b:navLink value="#{msg['menu.iniciar']}" rendered="#{p:ifAnyGranted('ADMINISTRADOR, SECRETARIA')}"  outcome="/pages/configuracion/iniciar" 
+
+
+<b:navLink outcome="/pages/index" value="#{msg['menubar.home']}" iconAwesome="home" />
+
+                <b:navLink value="#{msg['menu.iniciar']}" rendered="#{p:ifAnyGranted('ADMINISTRADOR, SECRETARIA')}"  outcome="/pages/configuracion/iniciar" 
+                           iconAwesome= "fa-pencil-square-o" />
+                <b:navLink value="#{msg['menu.configuracion']}" rendered="#{p:ifAnyGranted('ADMINISTRADOR, SECRETARIA')}"  outcome="/pages/configuracion/configuracion"  iconAwesome= "fa-pencil-square-o" />
+ <b:navLink/>
+<b:navLink value="#{msg['menu.cambiarpremios']}" rendered="#{p:ifAnyGranted('ADMINISTRADOR, SECRETARIA')}"  outcome="/pages/configuracion/cambiarpremios" 
                                iconAwesome= "fa-pencil-square-o" />
- <b:navLink value="#{msg['menu.configuracion']}" rendered="#{p:ifAnyGranted('ADMINISTRADOR, SECRETARIA')}"  outcome="/pages/configuracion/configuracion"  iconAwesome= "fa-pencil-square-o" />
+                    <b:navLink value="#{msg['menu.cambiarparticipantes']}" rendered="#{p:ifAnyGranted('ADMINISTRADOR, SECRETARIA')}"  outcome="/pages/configuracion/cambiarparticipantes" 
+                               iconAwesome= "fa-pencil-square-o" />
 
 
 
-                
 
 
-             
 
             </b:listLinks>
         </b:panel>
