--- a/src/main/webapp/layout/top.xhtml
+++ b/src/main/webapp/layout/top.xhtml
@@ -32,18 +32,18 @@
                 <b:dropMenu value="#{msg['menubar.registros']}" rendered="#{p:ifAnyGranted('ADMINISTRADOR, SECRETARIA')}">
 
 
- <b:navLink outcome="/pages/index" value="#{msg['menubar.home']}" iconAwesome="home" />
-                  
+                    <b:navLink outcome="/pages/index" value="#{msg['menubar.home']}" iconAwesome="home" />
+
                     <b:navLink value="#{msg['menu.iniciar']}" rendered="#{p:ifAnyGranted('ADMINISTRADOR, SECRETARIA')}"  outcome="/pages/configuracion/iniciar" 
-                               iconAwesome= "fa-pencil-square-o" />
-                    
+                               iconAwesome= "fa-key" />
+
                     <b:navLink value="#{msg['menu.configuracion']}" rendered="#{p:ifAnyGranted('ADMINISTRADOR, SECRETARIA')}"  outcome="/pages/configuracion/configuracion" 
-                               iconAwesome= "fa-pencil-square-o" />
+                               iconAwesome= "fa-wrench" />
                     <b:navLink value="#{msg['menu.cambiarpremios']}" rendered="#{p:ifAnyGranted('ADMINISTRADOR, SECRETARIA')}"  outcome="/pages/configuracion/cambiarpremios" 
-                               iconAwesome= "fa-pencil-square-o" />
+                               iconAwesome= "fa-bicycle" />
                     <b:navLink value="#{msg['menu.cambiarparticipantes']}" rendered="#{p:ifAnyGranted('ADMINISTRADOR, SECRETARIA')}"  outcome="/pages/configuracion/cambiarparticipantes" 
-                               iconAwesome= "fa-pencil-square-o" />
-                   
+                               iconAwesome= "fa-user-o" />
+
                 </b:dropMenu>
 
 
@@ -60,7 +60,7 @@
 
                 <b:dropMenu value="#{app['button.logout']}" >
 
-                   
+
                     <h:form id="navbartopform">
                         <p:commandLink class="btnn btnn-primary login-btn" value="#{app['button.logout']}" action="#{loginController.doLogout()}"/>
                     </h:form>
