--- a/src/main/webapp/layout/left.xhtml
+++ b/src/main/webapp/layout/left.xhtml
@@ -52,16 +52,16 @@ Hint to editors: The menus follow the Chicago style of capitalization. Please ca
 
 
 
-<b:navLink outcome="/pages/index" value="#{msg['menubar.home']}" iconAwesome="home" />
+                <b:navLink outcome="/pages/index" value="#{msg['menubar.home']}" iconAwesome="home" />
 
                 <b:navLink value="#{msg['menu.iniciar']}" rendered="#{p:ifAnyGranted('ADMINISTRADOR, SECRETARIA')}"  outcome="/pages/configuracion/iniciar" 
-                           iconAwesome= "fa-pencil-square-o" />
-                <b:navLink value="#{msg['menu.configuracion']}" rendered="#{p:ifAnyGranted('ADMINISTRADOR, SECRETARIA')}"  outcome="/pages/configuracion/configuracion"  iconAwesome= "fa-pencil-square-o" />
- <b:navLink/>
-<b:navLink value="#{msg['menu.cambiarpremios']}" rendered="#{p:ifAnyGranted('ADMINISTRADOR, SECRETARIA')}"  outcome="/pages/configuracion/cambiarpremios" 
-                               iconAwesome= "fa-pencil-square-o" />
-                    <b:navLink value="#{msg['menu.cambiarparticipantes']}" rendered="#{p:ifAnyGranted('ADMINISTRADOR, SECRETARIA')}"  outcome="/pages/configuracion/cambiarparticipantes" 
-                               iconAwesome= "fa-pencil-square-o" />
+                           iconAwesome= "fa-key" />
+                <b:navLink value="#{msg['menu.configuracion']}" rendered="#{p:ifAnyGranted('ADMINISTRADOR, SECRETARIA')}"  outcome="/pages/configuracion/configuracion"  iconAwesome= "fa-wrench" />
+                <b:navLink/>
+                <b:navLink value="#{msg['menu.cambiarpremios']}" rendered="#{p:ifAnyGranted('ADMINISTRADOR, SECRETARIA')}"  outcome="/pages/configuracion/cambiarpremios" 
+                           iconAwesome= "fa-bicycle" />
+                <b:navLink value="#{msg['menu.cambiarparticipantes']}" rendered="#{p:ifAnyGranted('ADMINISTRADOR, SECRETARIA')}"  outcome="/pages/configuracion/cambiarparticipantes" 
+                           iconAwesome= "fa-user-o" />
 
 
 
